K1J-1854: Update artifact.version, added intyg.bom.version, updated builder and runtime images, updated infra and common dependencies in Jenkins.properties

--- a/Jenkins.properties
+++ b/Jenkins.properties
@@ -1,7 +1,9 @@
 project.name=intyg
 
 artifact.name=intygstjanst
-artifact.version=4.0.0.43
+artifact.version=4.1.0.0
+
+intyg.bom.version=1.0.0.6
 
 context.path=inera-certificate
 
@@ -9,17 +11,16 @@ git.url=https://github.com/sklintyg/intygstjanst.git
 git.branch=main
 
 builder.image=app-builder-image
-builder.image.tag=21.0.5
+builder.image.tag=21.0.6
 
 runtime.image=tomcat-base
-runtime.image.tag=10.1.30.1
+runtime.image.tag=10.1.52.1
 
-dependencies.infra.version=4.0.0.+
-dependencies.common.version=4.0.0.+
+dependencies.infra.version=4.1.0.+
+dependencies.common.version=4.1.0.+
 
 dependencies.infra.version.resolved=4.0.0.21
-dependencies.common.version.resolved=4.0.0.25
+dependencies.common.version.resolved=4.0.0.31
 
 build.args=build testAggregateTestReport -PcodeQuality
 sonarqube.args=
-dependencies.common.version.resolved,=4.0.0.31
