K1J-1854: Add cyclonedx plugin to web project (to aggregate sbom from) and add configuration i Jenkins.properties to support sbom aggregation from other than root.

--- a/Jenkins.properties
+++ b/Jenkins.properties
@@ -7,6 +7,9 @@ intyg.bom.version=1.0.0.6
 
 context.path=inera-certificate
 
+sbom.aggregation.module=intygstjanst-web
+sbom.aggregation.path=web
+
 git.url=https://github.com/sklintyg/intygstjanst.git
 git.branch=main
 
