--- a/persistence/build.gradle
+++ b/persistence/build.gradle
@@ -23,4 +23,6 @@ dependencies {
 
     testImplementation "junit:junit"
     testImplementation "org.springframework:spring-test"
+
+    testRuntimeOnly "org.junit.vintage:junit-vintage-engine"
 }
