--- a/web/build.gradle
+++ b/web/build.gradle
@@ -117,6 +117,7 @@ dependencies {
     testCompileOnly "jakarta.persistence:jakarta.persistence-api"
     testCompileOnly 'org.projectlombok:lombok'
 
-    testRuntimeOnly "se.riv.clinicalprocess.healthcond.certificate:clinicalprocess-healthcond-certificate-schemas:${rivtaClinicalprocessSchemasVersion}"
     testRuntimeOnly "jakarta.servlet:jakarta.servlet-api"
+    testRuntimeOnly "org.junit.vintage:junit-vintage-engine"
+    testRuntimeOnly "se.riv.clinicalprocess.healthcond.certificate:clinicalprocess-healthcond-certificate-schemas:${rivtaClinicalprocessSchemasVersion}"
 }
