K1J-1854: Remove redundant -PcodeQuality as it isn't used since removing intyg gradle plugin

--- a/Jenkins.properties
+++ b/Jenkins.properties
@@ -25,5 +25,5 @@ dependencies.common.version=4.1.0.+
 dependencies.infra.version.resolved=4.0.0.21
 dependencies.common.version.resolved=4.0.0.31
 
-build.args=build testAggregateTestReport -PcodeQuality
+build.args=build testAggregateTestReport
 sonarqube.args=
