--- a/persistence/build.gradle
+++ b/persistence/build.gradle
@@ -8,7 +8,6 @@ dependencies {
 
     implementation "com.fasterxml.jackson.core:jackson-annotations"
     implementation "com.google.guava:guava"
-    implementation "com.h2database:h2"
     implementation "com.zaxxer:HikariCP"
     implementation "jakarta.persistence:jakarta.persistence-api"
     implementation "jakarta.xml.ws:jakarta.xml.ws-api"
@@ -25,4 +24,5 @@ dependencies {
     testImplementation "org.springframework:spring-test"
 
     testRuntimeOnly "org.junit.vintage:junit-vintage-engine"
+    testRuntimeOnly "com.h2database:h2"
 }
