K1J-1854: Upgrade gradle (8.14.4) and 3pp to latest versions (spring boot 3.5.10 as base). Use intyg-bom and remove code and configuration that isn't used anymore. Removed Owasp DependencyCheck (#262)

--- a/Jenkins.properties
+++ b/Jenkins.properties
@@ -1,25 +1,29 @@
 project.name=intyg
 
 artifact.name=intygstjanst
-artifact.version=4.0.0.43
+artifact.version=4.1.0.4
+
+intyg.bom.version=1.0.0.6
 
 context.path=inera-certificate
+
+sbom.aggregation.module=intygstjanst-web
+sbom.aggregation.path=web
 
 git.url=https://github.com/sklintyg/intygstjanst.git
 git.branch=main
 
 builder.image=app-builder-image
-builder.image.tag=21.0.5
+builder.image.tag=21.0.6
 
 runtime.image=tomcat-base
-runtime.image.tag=10.1.30.1
+runtime.image.tag=10.1.52.1
 
-dependencies.infra.version=4.0.0.+
-dependencies.common.version=4.0.0.+
+dependencies.infra.version=4.1.0.+
+dependencies.common.version=4.1.0.+
 
-dependencies.infra.version.resolved=4.0.0.21
-dependencies.common.version.resolved=4.0.0.25
+dependencies.infra.version.resolved=4.1.0.2
+dependencies.common.version.resolved=4.1.0.1
 
-build.args=build testAggregateTestReport -PcodeQuality
+build.args=build testAggregateTestReport
 sonarqube.args=
-dependencies.common.version.resolved,=4.0.0.31
