--- a/persistence/build.gradle
+++ b/persistence/build.gradle
@@ -20,9 +20,9 @@ dependencies {
 
     annotationProcessor 'org.projectlombok:lombok'
 
-    testImplementation "junit:junit"
+    testImplementation "org.junit.jupiter:junit-jupiter"
+    testImplementation "org.mockito:mockito-junit-jupiter"
     testImplementation "org.springframework:spring-test"
 
-    testRuntimeOnly "org.junit.vintage:junit-vintage-engine"
     testRuntimeOnly "com.h2database:h2"
 }
