K1J-1525: Move sjukfall logic from infra and remove dependency to infra sjukfall-engine

--- a/infra/build.gradle
+++ b/infra/build.gradle
@@ -1,3 +1,9 @@
 dependencies {
+    implementation "ch.qos.logback:logback-classic"
+    implementation "org.apache.commons:commons-lang3"
+    implementation "org.springframework:spring-context"
+
     annotationProcessor 'org.projectlombok:lombok'
+
+    testImplementation "org.mockito:mockito-junit-jupiter"
 }
