--- a/settings.gradle
+++ b/settings.gradle
@@ -17,8 +17,10 @@ include 'intygstjanst-infra'
 include 'intygstjanst-logging'
 include ':intygstjanst-persistence'
 include ':intygstjanst-web'
+include ':integration-api'
 
 project(':intygstjanst-infra').projectDir = "$rootDir/infra" as File
 project(':intygstjanst-logging').projectDir = "$rootDir/logging" as File
 project(':intygstjanst-persistence').projectDir = "$rootDir/persistence" as File
 project(':intygstjanst-web').projectDir = "$rootDir/web" as File
+project(':integration-api').projectDir = "$rootDir/integration-api" as File
